2016-04-06  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi (Global config file): Put before node 'Local
	config file'.

2016-04-05  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Remove defunct and undocumented --tool_root option.

2016-04-04  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: More overhauling.

2016-04-04  Ben Elliston  <bje@gnu.org>

	* lib/targetdb.exp (set_board_info): Improve comment.
	(add_board_info): Likewise.

2016-04-04  Ben Elliston  <bje@gnu.org>

	* NEWS: Add some more detail.

2016-04-04  Ben Elliston  <bje@gnu.org>

	* site.tmpl: Delete.
	* Makefile.am (EXTRA_DIST): Remove site.tmpl.
	* Makefile.in: Regenerate.

2016-04-03  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: More overhauling.

2016-04-03  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Document the magical handling of -D[01].

2016-04-03  Ben Elliston  <bje@gnu.org>

	* doc/runtest.1: Do not document obsolete --status option. It is
	still accepted for compatibility, but does nothing.

2016-04-03  Ben Elliston  <bje@gnu.org>

	* doc/runtest.1 (OPTIONS): Place short forms (-v, -V, -x) first.

2016-04-03  Ben Elliston  <bje@gnu.org>

	* doc/runtest.1 (OPTIONS): Sort options.

2016-04-03  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: More overhauling.

2016-04-02  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Fill paragraphs.

2016-04-02  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Fix capitalisation of procedure names
	throughout.  Use Tcl syntax in procedure prototypes, not C syntax.

2016-04-02  Rob Savoye  <rob.savoye@linaro.org>

	* contrib/mysql/create-db.sql: New file.
	* contrib/mysql/importxml.sh: Likewise.
	* contrib/mysql/make-datafile.sh: Likewise.
	* contrib/mysql/plot.sh: Likewise.
	* contrib/mysql/README: Likewise.
	* contrib/mysql/sum2xml.sh: Likewise.

2016-04-02  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to version 2016-04-02.
	* config.sub: Update to version 2016-03-30.

2016-04-02  Rob Savoye  <rob.savoye@linaro.org>
